# ngram-search

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: test.yml  wheels.yml
python/: .gitignore  MANIFEST.in  README.rst  setup.py  test.db  tests.py
python/ngram_search/: __init__.py  _search.pyx
rust/: Cargo.toml  README.md  out.txt  search.txt
rust/src/: lib.rs  search.rs
src/: lib.rs  main.rs  make.rs  search.rs
