[package]
name = "lookup"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"

[[bin]]
name = "make"
path = "src/make.rs"

[[bin]]
name = "search"
path = "src/search.rs"

[dependencies]
byteorder = "1.3"
memmap = { version = "0.7", optional = true }

[features]
default = ["mmap"]
mmap = ["memmap"]

[profile.release]
debug = true
