[package]
name = "ngram-search"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"
description = "Ngram-based indexing of strings into a binary file"
repository = "https://github.com/remram44/ngram-search-rs"
readme = "README.md"
keywords = ["ngram", "ngrams", "trigram", "trigrams", "indexing", "full-text-search", "text-search", "search"]
license = "MIT"

[[bin]]
name = "make"
path = "src/make.rs"

[[bin]]
name = "search"
path = "src/search.rs"

[dependencies]
byteorder = "1.3"
memmap = { version = "0.7", optional = true }
unicode-normalization = "0.1"

[features]
default = ["mmap"]
mmap = ["memmap"]

[profile.release]
debug = true
